# atmosphere

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  fs.md  rust-toolchain.toml  shell.nix
.github/: editorconfig.yml
.github/workflows/: build-tool.yml  build.yml  docs.yml  editorconfig.yml  kernel.yml  libcap.yml  linters.yml
aloader/: Cargo.toml
aloader/src/: logging.rs  main.rs
aloader/src/elf/: mod.rs
aloader/src/memory/: allocator.rs  mod.rs  userspace.rs
anet/: Cargo.toml
anet/examples/: cleanup-tap.sh  echo-server-stack.rs  h3-server.rs  kv-store.rs  setup-tap.sh
anet/src/: address.rs  lib.rs  tests.rs  util.rs
anet/src/arp/: mod.rs
anet/src/layer/: arp.rs  eth.rs  mod.rs
anet/src/layer/ip/: mod.rs  routing.rs
anet/src/layer/udp/: mod.rs
anet/src/netmanager/: mod.rs
anet/src/nic/: dummy.rs  mod.rs  tap.rs
anet/src/packet/: mod.rs
anet/src/stack/: arp.rs  mod.rs  udp.rs
astd/: Cargo.toml
astd/src/: cell.rs  lib.rs  sync.rs
astd/src/capability/: mod.rs
astd/src/collections/: deque.rs  hashmap.rs  mod.rs  string.rs  vec.rs
asys/src/: lib.rs  logger.rs
atcp/: Cargo.toml
atcp/src/: lib.rs
atest/: Cargo.toml
atest/src/: lib.rs
build-tool/: Cargo.toml  default.nix  lib.long-type-13116876756180958684.txt
build-tool/src/: cli.rs  error.rs  grub.rs  main.rs  project.rs  qemu.rs
build-tool/src/command/: build.rs  cargo_runner.rs  gdb.rs  mod.rs  pre_commit.rs  run.rs
build-tool/src/emulator/: bochs.rs  gdb.rs  mod.rs  output_filter.rs  qemu.rs
dom0/: Cargo.toml  build.rs
dom0/libdma/: Cargo.toml
dom0/libdma/src/: dma.rs  lib.rs  mmio.rs  nvme.rs
dom0/libtime/src/: lib.rs
dom0/src/: allocator.rs  e810_client.rs  ixgbe_client.rs  main.rs  nvme_client.rs  slab_alloc.rs
dom0/src/nvme/: array_init.rs  device.rs  mod.rs  nvme_test.rs  queue.rs  regs.rs
dom0/src/pci/: bus.rs  class.rs  func.rs  header.rs  mod.rs  utils.rs
e810_driver/: Cargo.toml
e810_driver/src/: aq.rs  device.rs  lib.rs
ixgbe_driver/src/: device.rs  ixgbe_test.rs
kernel/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
kernel-logger/: Cargo.toml
kernel-logger/src/: lib.rs
kernel/.cargo/: config
kernel/misc/qemu-grub/: README.md
kernel/misc/qemu-grub/boot/grub/: grub.cfg
kernel/src/: cpu.rs  error.rs  gdt.rs  linker.ld  logging.rs  main.rs  pci.rs  ring_buffer.rs  thread.rs  utils.rs  x86_64-unknown-none.json
kernel/src/acpi/: mod.rs  sdt.rs
kernel/src/boot/: README.md  ap_start.rs  command_line.rs  crt0.asm  grub.cfg  mod.rs  multiboot2_header.asm
kernel/src/capability/: mod.rs  untyped.rs
kernel/src/console/: mod.rs  ns16550a.rs  serial.rs  vga.rs
kernel/src/gdt/: mod.rs  types.rs
kernel/src/interrupt/: exception.rs  idt.rs  lapic.rs  mod.rs
kernel/src/kernel/: mod.rs
kernel/src/memory/: mod.rs  paging.rs
kernel/src/scripts/: cap_test.rs  fail_test.rs  mod.rs  vmx_test.rs
kernel/src/syscalls/: mod.rs
kernel/src/vmx/: mod.rs  scheduler.rs  types.rs  vmcs.rs
kernel/verified/: array_set.rs  define.rs  lib.rs  linked_list.rs  page_arena.rs  trap.rs
kernel/verified/allocator/: page_allocator_spec_impl.rs  page_allocator_util_t.rs
kernel/verified/kernel/: create_and_map_pages.rs  kernel_drop_endpoint.rs  kernel_kill_proc.rs  kernel_kill_thread.rs  kernel_tcb_sched.rs  mod.rs  spec.rs  spec_util.rs  syscall_endpoint.rs  syscall_mem.rs  syscall_mmap.rs  syscall_new_endpoint.rs  syscall_pci.rs  syscall_receive_endpoint.rs  syscall_send_endpoint.rs  syscall_thread.rs  thread_remove_endpoint.rs
kernel/verified/kernel/kernel_ipc_impl/: kernel_ipc_impl2.rs
kernel/verified/kernel/kernel_mem_impl/: kernel_mem_impl_mod1.rs  kernel_mem_impl_mod4.rs
kernel/verified/kernel/syscall_ipc/: mod.rs  syscall_call_with_message.rs  syscall_receive_empty.rs  syscall_receive_endpoint.rs  syscall_receive_message.rs  syscall_receive_pages.rs  syscall_reply_and_receive.rs  syscall_reply_empty.rs  syscall_reply_message.rs  syscall_send_empty.rs  syscall_send_empty_no_wait.rs  syscall_send_endpoint.rs  syscall_send_message.rs  syscall_send_pages.rs  syscall_send_pages_no_wait.rs
kernel/verified/kernel/syscall_proc/: mod.rs  syscall_new_proc.rs  syscall_new_proc_with_iommu.rs
kernel/verified/lemma/: lemma_t.rs  lemma_u.rs
kernel/verified/mars_dynamiclinkedlist/: dyn_array_util.rs  mod.rs
kernel/verified/memory_manager/: mmu_util.rs  spec_impl.rs
kernel/verified/mmu/: mmu_init.rs
kernel/verified/pagetable/: mod.rs  pagemap_util_t.rs  pagetable_impl_base.rs  pagetable_spec copy.rs  pagetable_spec.rs
kernel/verified/process_manager/: container.rs  container_tree.rs  container_util_t.rs  endpoint.rs  endpoint_util_t.rs  impl_base.rs  impl_drop_enpoints.rs  impl_kill_container.rs  impl_kill_proc.rs  impl_kill_thread.rs  impl_new_container.rs  impl_new_proc.rs  impl_new_proc_with_iommu.rs  impl_new_thread.rs  mod.rs  proc_util_t.rs  process_tree.rs  spec_impl.rs  spec_proof.rs  spec_util.rs  thread_util_t.rs
kernel/verified/slinkedlist/: spec_impl_u.rs
kernel/verified/util/: page_ptr_util_u.rs
libcap/: Cargo.toml
libcap/src/: cpu.rs  iterator.rs  lib.rs  tests.rs  untyped.rs
mlx5_driver/: Cargo.toml
mlx5_driver/src/: device.rs  lib.rs
mlx5_driver/src/kernel_config/: mod.rs  time.rs
mlx5_driver/src/memory/: mod.rs
mlx5_driver/src/memory_structs/: mod.rs
mlx5_driver/src/mlx_ethernet/: mod.rs
mlx5_driver/src/nic_buffers/: mod.rs
mlx5_driver/src/nic_initialization/: mod.rs
mlx5_driver/src/pci/: mod.rs
mlx5_driver/src/sync_irq/: mod.rs
nix/: environment.nix  nixpkgs.nix  rust-analyzer.sh  sources.json
ns16550a/: Cargo.toml
ns16550a/src/: lib.rs
pcid/src/: func.rs  header.rs  lib.rs  pci.rs  utils.rs
portman/: Cargo.toml
portman/src/: lib.rs
verified/: Cargo.toml  DESIGN.md
verified/src/: lib.rs  option.rs  vec.rs
verify/: Cargo.toml
verify/src/: lib.rs  test.rs
verify/src/extern_spec/: mod.rs  option.rs
verus/: default.nix  hello-verus.rs  nixpkgs.nix  rustc.nix  verus-unwrapped.nix  verus.nix  z3.nix
