[package]
name = "anet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.14.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-queue", "alloc"], default-features = false }
hashbrown = "0.12.3"
lazy_static = "1.4.0"
managed = "0.8"
pnet = "0.31.0"
ring = "0.16.20"
spin = "0.9.4"
thingbuf = "0.1.3"
tun-tap = "0.1.3"
