[package]
name = "build-tool"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "atmo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.51"
byte-unit = "4.0.12"
cargo = "0.57.0"
clap = { version = "3.2.22", features = ["derive"] }
clap_complete = "3.2.5"
env_logger = "0.9.0"
home = "0.5.3"
log = { version = "0.4.14", features = [] }
stack-sizes = "0.4.0"
tempfile = "3.2.0"
tokio = { version = "1.11.0", features = ["full"] }
