[package]
name = "dom0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asys = { path = "../asys" }
log = "0.4.19"
bitflags = "1.0"
byteorder = { version = "1.2", default-features = false }
x86 = "0.52.0"
heapless = "0.7.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }
