[package]
name = "atmosphere"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
astd = { path = "../astd" }
libcap = { path = "../libcap" }
ns16550a = { path = "../ns16550a" }

bit_field = "0.10.1"
log = "0.4.14"
multiboot = "0.7.0"
num = { version = "0.4", default-features = false }
num-derive = "0.3.3"
qemu-exit = "2.0.1"
snafu = { version = "0.6.10", default-features = false }
x86 = "0.39.0"

[build-dependencies]
nasm-rs = "0.1.5"
