[package]
name = "atmosphere"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
astd = { path = "../astd" }
libcap = { path = "../libcap" }
ns16550a = { path = "../ns16550a" }

bit_field = "0.10.1"
log = "0.4.14"
multiboot2 = "0.12.1"
num = { version = "0.4", default-features = false }
num-derive = "0.3.3"
realjump = "0.1.0"
snafu = { version = "0.6.10", default-features = false }
x86 = "0.39.0"

[dependencies.pal]
git = "https://github.com/mars-research/pal"
rev = "dc9fd90da7b920eb4523db8907cdcf547ac7ce23"
default-features = false
features = [ "intel_64bit_systemv_nasm" ]

[build-dependencies]
nasm-rs = "0.1.5"
