[package]
name = "portman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atcp = { path = "../atcp"}
hashbrown = "0.12.3"
pnet = "0.31.0"
ringbuf = { version = "0.3.1", features = [ "alloc" ]}

prusti-contracts = { git = "https://github.com/viperproject/prusti-dev" }
